Made changes. Almost ready for deployment.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The Act</title>
+    <title>Rhö</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,11 +54,11 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#music">Music</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#download">Download</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -75,7 +75,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">The Act</h1>
+                        <h1 class="brand-heading">Rhö</h1>
                         <!-- <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p> -->
                         <!-- <img src="img/godT.png" style="width:500px;height:500px;">
                         <br />
@@ -86,9 +86,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2"> -->
-                        <img src="img/newGod.png" style="width:300px;height:300px;">
+                        <img src="img/newRHO.gif" style="width:300px;height:300px;">
                         <br />
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#music" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div
@@ -98,15 +98,20 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="music" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About The Act</h2>
-                <p>Description</p>
-                <!-- <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <h2>Music</h2>
+                <!-- <p>Description</p>
+                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p> -->
             </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259962955&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+            </div
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -118,13 +123,10 @@
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/194472993&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
         </div>
-        <!-- <div class="row">
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/126519706&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        </div> -->
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <!-- <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -134,29 +136,31 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
+        <div clas="download-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Get in touch with The Act</h2>
-                <p>Get in touch with The Act, and follow him on his journey.</p>
-                <p><a href="mailto:theAct@">theAct@</a>
+                <h2>Get in touch with Rhö</h2>
+                <!-- <p>Get in touch with Rhö, and follow him on his journey.</p> -->
+                <!-- <p><a href="mailto:theAct@">theAct@</a> -->
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-soundcloud fa-fw"></i> <span class="network-name">Soundcloud</span></a>
+                        <a href="https://soundcloud.com/rho_official" class="btn btn-default btn-lg"><i class="fa fa-soundcloud fa-fw"></i> <span class="network-name">Soundcloud</span></a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                        <a href="https://www.instagram.com/rho_official/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/RHO_Official-826158630822878/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                 </ul>
             </div>
         </div>
+    </div>
     </section>
 
     <!-- Map Section -->
@@ -165,8 +169,8 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Art by XXXXXX</p>
-            <p>Copyright &copy; The Act 2016</p>
+            <p>Art by <a href="https://society6.com/threadzone">Liall Linz</a></p>
+            <p>Copyright &copy; Rhö 2016</p>
         </div>
     </footer>
 
